# NeuroPLC

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
config/: prometheus.yml
crates/core-spine/: Cargo.toml
crates/core-spine/proptest-regressions/: safety_proptest.txt
crates/core-spine/src/: control_loop.rs  hal.rs  hal_sim.rs  lib.rs  safety.rs  safety_proptest.rs  safety_supervisor.rs  sync.rs  tags.rs  timebase.rs
crates/neuro-io/: Cargo.toml  build.rs
crates/neuro-io/src/: auth.rs  bridge.rs  lib.rs  metrics.rs  protocol.rs  protocol_proto.rs  tls.rs
crates/neuro-io/tests/: protocol_vectors.rs
crates/neuro-plc/: Cargo.toml
crates/neuro-plc/src/: auth.rs  bridge.rs  hal_modbus.rs  lib.rs  main.rs  opcua_server.rs  protocol.rs  rerun_viz.rs
crates/neuro-plc/src/infra/: audit.rs
crates/neuro-plc/src/integrations/: mod.rs  opcua_server.rs  rerun_viz.rs
crates/neuro-plc/src/runtime/: app.rs  config.rs  logging.rs  mod.rs  telemetry.rs
crates/neuro-plc/tests/: integration_test.rs
deploy/: README.md
deploy/argocd/: application.yaml
deploy/kubernetes/: deployment.yaml
docker/: Dockerfile  README.md  basyx-infra.yml  compose.digitaltwin.yml  compose.prod.yml  compose.simulation.yml
docs/: digital-twin.md  standards-alignment.md
docs/protocol/: README.md  hello-v1.schema.json  recommendation-v1.schema.json  state-v1.schema.json
docs/reports/: simulation-data-journey.md
docs/safety/: evidence-index.md  safety-case.md
examples/aasx/: README.md
logs/sim/: audit.jsonl  basyx_status.json  metrics.prom
observability/: alert_rules.yml  prometheus.yml
observability/grafana/provisioning/dashboards/: dashboards.yml
pki-server/own/: cert.der
pki-server/private/: private.pem
proto/: neuroplc.proto
python-cortex/: pyproject.toml  run_supervisor.py
python-cortex/models/: neuro_v1.onnx
python-cortex/src/agent/: audit.py  llm_engine.py  ml_inference.py  safety_validator.py  schemas.py  supervisor.py  tools.py  train_model.py
python-cortex/src/agent/llm/: __init__.py  cache.py
python-cortex/src/agent/llm/graph/: __init__.py  builder.py  nodes.py  state.py
python-cortex/src/agent/llm/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
python-cortex/src/agent/memory/: __init__.py  buffer.py  learning.py  queries.py  store.py
python-cortex/src/digital_twin/: __init__.py  basyx_adapter.py  cache.py
python-cortex/tests/: test_adversarial.py  test_basyx_query.py  test_cache.py  test_langgraph.py  test_learning.py  test_memory.py  test_providers.py  test_tools.py
scripts/: doctor_sim.py  export_aasx.py  run_simulation.sh
simulators/modbus/: Dockerfile  modbus_server.py
simulators/plant/: Dockerfile  plant_sim.py  requirements.txt
