[workspace]
resolver = "2"
members = [
    "crates/core-spine",
    "crates/neuro-io",
    "crates/neuro-plc",
]
default-members = ["crates/neuro-plc"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Metrics
prometheus = "0.13"

# TLS
rustls = "0.23"
rustls-pemfile = "2"

# HTTP server for metrics
tiny_http = "0.12"

# Crypto for auth tokens
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1.36", features = ["full"] }
tokio-modbus = "0.9"
futures = "0.3"
