[project]
name = "neuroplc-cortex"
version = "0.1.0"
description = "NeuroPLC Python Cortex"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.16.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "skl2onnx>=1.15.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0"
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
langgraph = ["langgraph>=0.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]
all = [
    "anthropic>=0.25.0",
    "langgraph>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
neuroplc-cortex = "agent.supervisor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
