[package]
name = "neuro-io"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
dev-certs = ["dep:rcgen"]
proto = ["dep:prost", "dep:prost-build"]

[dependencies]
core-spine = { path = "../core-spine" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Metrics
prometheus = { workspace = true }
tiny_http = { workspace = true }

# TLS
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Auth
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Modbus
tokio = { workspace = true }
tokio-modbus = { workspace = true }
futures = { workspace = true }

# Optional features
rcgen = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }
