[package]
name = "neuro-plc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "neuro-plc"

[features]
default = []
opcua = ["dep:opcua"]
rerun = ["dep:rerun"]

[dependencies]
core-spine = { path = "../core-spine" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opcua = { version = "0.12", optional = true }
rerun = { version = "0.18", optional = true }

[dependencies.env_logger]
version = "0.11"
