[package]
name = "neuro-plc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "neuro-plc"

[features]
default = []
opcua = ["dep:opcua"]
rerun = ["dep:rerun"]
dev-certs = ["neuro-io/dev-certs"]

[dependencies]
core-spine = { path = "../core-spine" }
neuro-io = { path = "../neuro-io" }
serde = { workspace = true }
serde_json = { workspace = true }

# Logging/Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Optional features
opcua = { version = "0.12", optional = true }
rerun = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3"
